--- a/src/app/client/src/assets/styles/components/_form.scss
+++ b/src/app/client/src/assets/styles/components/_form.scss
@@ -75,7 +75,7 @@ $sb-selection-line-height: calculateRem(18px);
     font-size: calculateRem(12px);
     width: 100%;
     min-height: $sb-selection-dropdown-min-height;
-    padding: 0.2rem 0.5rem;
+    padding: ($base-block-space / 2) ($base-block-space * 1);
     border-color: var(--gray-200);
     display: flex;
     align-items: center;
